# ClawKeeper

./: .gitignore  AI_Agent安全格局分析报告.md  DESIGN.md  QUICKSTART.md  README.md  README_v02.md  pyproject.toml  update.md
adapters_js/openclaw/: README.md  openclaw.plugin.json  package.json
clawkeeper-plugin/: README.md  install.ps1  install.sh  openclaw.plugin.json  package-lock.json
clawkeeper-plugin/src/: index.js
clawkeeper-plugin/test/: budget-guard.test.js  skill-scanner.test.js
clawkeeper-skill/docs/: OpenClaw-Windows-Guide-en.md  OpenClaw-Windows-Guide-zh.md  OpenClaw-feishu-Guide-en.md
clawkeeper-watcher/: README.md
clawkeeper_core/: __init__.py  audit.py  controls.py  drift.py  judge.py  maintenance.py  memory.py  metadata.py  permission.py  profile.py  risk.py  scanner.py  schemas.py  security_rules.py  server.py  state.py
clawkeeper_core/adapters/: __init__.py  base.py  hermes.py  mcp.py
clawkeeper_core/guards/: __init__.py  budget.py  credential_redact.py  exec_gate.py  input_validator.py  path_guard.py  return_content_scan.py  script_body_scan.py  url_safety.py
clawkeeper_core/watcher/: README.md  agent.py  (+6 more)
docs/: HERMES_INTEGRATION.md  integration-surfaces.md
examples/: hermes_demo.py  hermes_discord_bot.py
tests/: test_adapter_base.py  test_credential_redact.py  test_drift.py  test_guards.py  test_hermes_adapter.py  test_hermes_plugin_hook.py  test_judge.py  test_maintenance.py  test_mcp_adapter.py  test_memory.py  test_permission.py  test_profile.py  test_return_content_scan.py  test_risk.py  test_scanner.py  test_script_body_scan.py  test_server.py  test_smoke.py  test_url_safety.py  test_watcher_e2e.py  test_watcher_policy.py
(+62 files in other folders)
